# sophos-firewall-audit

./: .gitignore  README.md  audit.py  audit_settings.yaml  audit_settings.yaml.example  auth.py  aws_user.sh  aws_user.yaml  firewalls.yaml  firewalls.yaml.example  postaudit.py  postaudit_web.py  pyproject.toml  remediate.py  results.json  testargs.py  utils.py
.github/workflows/: blackduck.yaml  example_output.yaml  example_output.yml  release.yaml
audit-results-2023-10-03-120356/: index.html  us-bos-utm-stage-1.json
audit-results-2023-10-04-141723/: index.html  us-bos-utm-stage-1.html  us-bos-utm-stage-1.json
docker/: Dockerfile  nginx.conf  server.csr
helm-chart/: Chart.yaml  values.yaml
nautobot_query/: all_devices_query.gql  device_query.gql  location_query.gql
rules/: __init__.py  accesslist.py  activethreatresponse.py  adminauthen.py  adminservices.py  backup.py  central.py  certificate.py  deviceaccessprofile.py  dnsservers.py  hostgroups.py  ipspolicies.py  loginsecurity.py  malwareprotection.py  notificationlist.py  notifications.py  smtpprotection.py  snmpv3.py  syslog.py  time.py
sample_output/: index.html
sophos_firewall_audit/: audit.py  auth.py  logging_config.py  postaudit.py  postaudit_web.py  remediate.py  rule_export.py  sophosfirewallaudit.py  utils.py
templates/: all_devices_query.j2  device_query.j2  email_body.j2  email_body_web.j2  index.j2  location_query.j2  region_query.j2  results.j2  site_query.j2
terraform/: copyfiles.sh  main.tf  merge_pr.py  postaudit.py  postaudit_web.py  run_pipeline.sh  terraform.tf
(+35 files in other folders)
