[tool.poetry]
name = "sophos-firewall-audit"
version = "0.1.0"
description = "Sophos Firewall Audit"
authors = ["Matt Mullen <matt.mullen@sophos.com>"]
readme = "README.md"
packages = [{include = "sophos_firewall_audit"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
hvac = "^1.2.1"
jinja2 = "^3.1.2"
requests = "^2.31.0"
prettytable = "^3.9.0"
rich = "^13.5.3"
pynautobot = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
